// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TextInput /> should render 1`] = `
<View
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    data-blade-component="textinput"
    style={
      [
        {},
      ]
    }
  >
    <View
      data-blade-component="base-box"
      display="flex"
      flexDirection="column"
      position="relative"
      style={
        [
          {
            "display": "flex",
            "flexDirection": "column",
            "position": "relative",
            "width": "100%",
          },
        ]
      }
      width="100%"
    >
      <View
        data-blade-component="base-box"
        display="flex"
        flexDirection="row"
        justifyContent="space-between"
        style={
          [
            {
              "display": "flex",
              "flexDirection": "row",
              "justifyContent": "space-between",
              "marginBottom": 0,
              "marginTop": 0,
            },
          ]
        }
      >
        <View
          data-blade-component="base-box"
          style={
            [
              {
                "marginBottom": 4,
                "marginRight": 16,
              },
            ]
          }
        >
          <View
            alignItems="center"
            data-blade-component="base-box"
            display="flex"
            flexDirection="row"
            gap="spacing.0"
            maxHeight="36px"
            style={
              [
                {
                  "alignItems": "center",
                  "display": "flex",
                  "flexDirection": "row",
                  "gap": 0,
                  "maxHeight": 36,
                },
              ]
            }
          >
            <Text
              accessible={true}
              color="surface.text.gray.subtle"
              data-blade-component="text"
              fontFamily="text"
              fontSize={75}
              fontStyle="normal"
              fontWeight="semibold"
              lineHeight={75}
              numberOfLines={2}
              style={
                [
                  {
                    "color": "hsla(211, 26%, 34%, 1)",
                    "fontFamily": "Inter",
                    "fontSize": 12,
                    "fontStyle": "normal",
                    "fontWeight": "600",
                    "letterSpacing": 0,
                    "lineHeight": 18,
                    "marginBottom": 0,
                    "marginLeft": 0,
                    "marginRight": 0,
                    "marginTop": 0,
                    "paddingBottom": 0,
                    "paddingLeft": 0,
                    "paddingRight": 0,
                    "paddingTop": 0,
                    "textDecorationLine": "none",
                  },
                ]
              }
            >
              Enter name
            </Text>
            <View
              data-blade-component="visually-hidden"
              style={
                [
                  {
                    "borderColor": "black",
                    "borderStyle": "solid",
                    "borderWidth": 0,
                    "clip": "rect(0 0 0 0)",
                    "clipPath": "inset(50%)",
                    "height": 1,
                    "left": -10000,
                    "marginBottom": -1,
                    "marginLeft": 0,
                    "marginRight": -1,
                    "marginTop": 0,
                    "overflow": "hidden",
                    "paddingBottom": 0,
                    "paddingLeft": 0,
                    "paddingRight": 0,
                    "paddingTop": 0,
                    "position": "absolute",
                    "whiteSpace": "nowrap",
                    "width": 1,
                    "wordWrap": "normal",
                  },
                ]
              }
            >
              <Text
                accessible={true}
                color="surface.text.gray.normal"
                data-blade-component="text"
                fontFamily="text"
                fontSize={100}
                fontStyle="normal"
                fontWeight="regular"
                lineHeight={100}
                style={
                  [
                    {
                      "color": "hsla(212, 39%, 16%, 1)",
                      "fontFamily": "Inter",
                      "fontSize": 14,
                      "fontStyle": "normal",
                      "fontWeight": "400",
                      "letterSpacing": 0,
                      "lineHeight": 20,
                      "marginBottom": 0,
                      "marginLeft": 0,
                      "marginRight": 0,
                      "marginTop": 0,
                      "paddingBottom": 0,
                      "paddingLeft": 0,
                      "paddingRight": 0,
                      "paddingTop": 0,
                      "textDecorationLine": "none",
                    },
                  ]
                }
              />
            </View>
          </View>
        </View>
      </View>
      <View
        currentInteraction="default"
        data-blade-component="base-box"
        isTableInputCell={false}
        style={
          [
            {},
            {
              "borderRadius": 4,
              "width": "100%",
            },
          ]
        }
      >
        <View
          currentInteraction="default"
          isTableInputCell={false}
          onClick={[Function]}
          setShowAllTagsWithAnimation={[Function]}
          size="medium"
          style={
            [
              {
                "backgroundColor": "hsla(0, 0%, 100%, 1)",
                "borderColor": "hsla(214, 28%, 84%, 1)",
                "borderRadius": 4,
                "borderStyle": "solid",
                "borderWidth": 0,
                "display": "flex",
                "flexDirection": "row",
                "position": "relative",
                "width": "100%",
              },
              {},
              {
                "backgroundColor": "hsla(0, 0%, 100%, 1)",
                "borderColor": "hsla(214, 28%, 84%, 1)",
                "borderRadius": 4,
                "borderStyle": "solid",
                "borderWidth": 1,
              },
            ]
          }
        >
          <TextInput
            accessibilityDescribedBy=""
            accessibilityInvalid={false}
            accessibilityRequired={false}
            accessibilityState={
              {
                "disabled": false,
                "expanded": undefined,
              }
            }
            accessible={true}
            autoCompleteType="off"
            data-blade-component="styled-base-input"
            editable={true}
            hasTags={false}
            id="textinput-1-input-2"
            isFocused={false}
            isTableInputCell={false}
            isTextArea={false}
            keyboardType="default"
            multiline={false}
            onBlur={[Function]}
            onChangeText={[Function]}
            onEndEditing={[Function]}
            onFocus={[Function]}
            onKeyPress={[Function]}
            onSubmitEditing={[Function]}
            placeholderTextColor="hsla(211, 20%, 52%, 0.32)"
            returnKeyType="default"
            secureTextEntry={false}
            style={
              [
                {
                  "backgroundColor": "hsla(0, 0%, 100%, 0)",
                  "color": "hsla(211, 26%, 34%, 1)",
                  "flexBasis": 0,
                  "flexGrow": 1,
                  "flexShrink": 1,
                  "fontFamily": "Inter",
                  "fontSize": 14,
                  "fontStyle": "normal",
                  "fontWeight": "400",
                  "height": 36,
                  "letterSpacing": 0,
                  "marginBottom": 0,
                  "marginLeft": 0,
                  "marginRight": 0,
                  "marginTop": 0,
                  "minHeight": 36,
                  "paddingBottom": 8,
                  "paddingLeft": 12,
                  "paddingRight": 12,
                  "paddingTop": 8,
                  "textAlignVertical": "top",
                  "textDecorationLine": "none",
                  "width": "100%",
                },
              ]
            }
            textContentType="none"
            trailingInteractionElement={null}
            valueComponentType="text"
          />
        </View>
      </View>
    </View>
    <View
      data-blade-component="base-box"
      style={
        [
          {
            "marginLeft": 0,
          },
        ]
      }
    >
      <View
        data-blade-component="base-box"
        display="flex"
        flexDirection="row"
        justifyContent="flex-end"
        style={
          [
            {
              "display": "flex",
              "flexDirection": "row",
              "justifyContent": "flex-end",
            },
          ]
        }
      />
    </View>
  </View>
</View>
`;

exports[`<TextInput /> should render with icon, prefix, suffix 1`] = `
<View
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    data-blade-component="textinput"
    style={
      [
        {},
      ]
    }
  >
    <View
      data-blade-component="base-box"
      display="flex"
      flexDirection="column"
      position="relative"
      style={
        [
          {
            "display": "flex",
            "flexDirection": "column",
            "position": "relative",
            "width": "100%",
          },
        ]
      }
      width="100%"
    >
      <View
        data-blade-component="base-box"
        display="flex"
        flexDirection="row"
        justifyContent="space-between"
        style={
          [
            {
              "display": "flex",
              "flexDirection": "row",
              "justifyContent": "space-between",
              "marginBottom": 0,
              "marginTop": 0,
            },
          ]
        }
      >
        <View
          data-blade-component="base-box"
          style={
            [
              {
                "marginBottom": 4,
                "marginRight": 16,
              },
            ]
          }
        >
          <View
            alignItems="center"
            data-blade-component="base-box"
            display="flex"
            flexDirection="row"
            gap="spacing.0"
            maxHeight="36px"
            style={
              [
                {
                  "alignItems": "center",
                  "display": "flex",
                  "flexDirection": "row",
                  "gap": 0,
                  "maxHeight": 36,
                },
              ]
            }
          >
            <Text
              accessible={true}
              color="surface.text.gray.subtle"
              data-blade-component="text"
              fontFamily="text"
              fontSize={75}
              fontStyle="normal"
              fontWeight="semibold"
              lineHeight={75}
              numberOfLines={2}
              style={
                [
                  {
                    "color": "hsla(211, 26%, 34%, 1)",
                    "fontFamily": "Inter",
                    "fontSize": 12,
                    "fontStyle": "normal",
                    "fontWeight": "600",
                    "letterSpacing": 0,
                    "lineHeight": 18,
                    "marginBottom": 0,
                    "marginLeft": 0,
                    "marginRight": 0,
                    "marginTop": 0,
                    "paddingBottom": 0,
                    "paddingLeft": 0,
                    "paddingRight": 0,
                    "paddingTop": 0,
                    "textDecorationLine": "none",
                  },
                ]
              }
            >
              Enter company website
            </Text>
            <View
              data-blade-component="visually-hidden"
              style={
                [
                  {
                    "borderColor": "black",
                    "borderStyle": "solid",
                    "borderWidth": 0,
                    "clip": "rect(0 0 0 0)",
                    "clipPath": "inset(50%)",
                    "height": 1,
                    "left": -10000,
                    "marginBottom": -1,
                    "marginLeft": 0,
                    "marginRight": -1,
                    "marginTop": 0,
                    "overflow": "hidden",
                    "paddingBottom": 0,
                    "paddingLeft": 0,
                    "paddingRight": 0,
                    "paddingTop": 0,
                    "position": "absolute",
                    "whiteSpace": "nowrap",
                    "width": 1,
                    "wordWrap": "normal",
                  },
                ]
              }
            >
              <Text
                accessible={true}
                color="surface.text.gray.normal"
                data-blade-component="text"
                fontFamily="text"
                fontSize={100}
                fontStyle="normal"
                fontWeight="regular"
                lineHeight={100}
                style={
                  [
                    {
                      "color": "hsla(212, 39%, 16%, 1)",
                      "fontFamily": "Inter",
                      "fontSize": 14,
                      "fontStyle": "normal",
                      "fontWeight": "400",
                      "letterSpacing": 0,
                      "lineHeight": 20,
                      "marginBottom": 0,
                      "marginLeft": 0,
                      "marginRight": 0,
                      "marginTop": 0,
                      "paddingBottom": 0,
                      "paddingLeft": 0,
                      "paddingRight": 0,
                      "paddingTop": 0,
                      "textDecorationLine": "none",
                    },
                  ]
                }
              />
            </View>
          </View>
        </View>
      </View>
      <View
        currentInteraction="default"
        data-blade-component="base-box"
        isTableInputCell={false}
        style={
          [
            {},
            {
              "borderRadius": 4,
              "width": "100%",
            },
          ]
        }
      >
        <View
          currentInteraction="default"
          isTableInputCell={false}
          onClick={[Function]}
          setShowAllTagsWithAnimation={[Function]}
          size="medium"
          style={
            [
              {
                "backgroundColor": "hsla(0, 0%, 100%, 1)",
                "borderColor": "hsla(214, 28%, 84%, 1)",
                "borderRadius": 4,
                "borderStyle": "solid",
                "borderWidth": 0,
                "display": "flex",
                "flexDirection": "row",
                "position": "relative",
                "width": "100%",
              },
              {},
              {
                "backgroundColor": "hsla(0, 0%, 100%, 1)",
                "borderColor": "hsla(214, 28%, 84%, 1)",
                "borderRadius": 4,
                "borderStyle": "solid",
                "borderWidth": 1,
              },
            ]
          }
        >
          <View
            alignItems="center"
            alignSelf="center"
            data-blade-component="base-box"
            display="flex"
            flexDirection="row"
            style={
              [
                {
                  "alignItems": "center",
                  "alignSelf": "center",
                  "display": "flex",
                  "flexDirection": "row",
                },
              ]
            }
          >
            <View
              data-blade-component="base-box"
              display="flex"
              style={
                [
                  {
                    "display": "flex",
                    "paddingLeft": 12,
                  },
                ]
              }
            >
              <RNSVGSvgView
                accessibilityElementsHidden={true}
                align="xMidYMid"
                bbHeight="16px"
                bbWidth="16px"
                data-blade-component="icon"
                fill="none"
                focusable={false}
                height="16px"
                importantForAccessibility="no-hide-descendants"
                meetOrSlice={0}
                minX={0}
                minY={0}
                style={
                  [
                    {
                      "backgroundColor": "transparent",
                      "borderWidth": 0,
                    },
                    [
                      {},
                    ],
                    {
                      "flex": 0,
                      "height": 16,
                      "width": 16,
                    },
                  ]
                }
                vbHeight={24}
                vbWidth={24}
                width="16px"
              >
                <RNSVGGroup
                  fill={null}
                  propList={
                    [
                      "fill",
                    ]
                  }
                >
                  <RNSVGPath
                    d="M12 11C12.5523 11 13 11.4477 13 12V16C13 16.5523 12.5523 17 12 17C11.4477 17 11 16.5523 11 16V12C11 11.4477 11.4477 11 12 11Z"
                    fill={
                      {
                        "payload": 4285959847,
                        "type": 0,
                      }
                    }
                    propList={
                      [
                        "fill",
                      ]
                    }
                  />
                  <RNSVGPath
                    d="M12 7C11.4477 7 11 7.44772 11 8C11 8.55228 11.4477 9 12 9H12.01C12.5623 9 13.01 8.55228 13.01 8C13.01 7.44772 12.5623 7 12.01 7H12Z"
                    fill={
                      {
                        "payload": 4285959847,
                        "type": 0,
                      }
                    }
                    propList={
                      [
                        "fill",
                      ]
                    }
                  />
                  <RNSVGPath
                    clipRule={0}
                    d="M1 12C1 5.92487 5.92487 1 12 1C18.0751 1 23 5.92487 23 12C23 18.0751 18.0751 23 12 23C5.92487 23 1 18.0751 1 12ZM12 3C7.02944 3 3 7.02944 3 12C3 16.9706 7.02944 21 12 21C16.9706 21 21 16.9706 21 12C21 7.02944 16.9706 3 12 3Z"
                    fill={
                      {
                        "payload": 4285959847,
                        "type": 0,
                      }
                    }
                    fillRule={0}
                    propList={
                      [
                        "fill",
                        "fillRule",
                      ]
                    }
                  />
                </RNSVGGroup>
              </RNSVGSvgView>
            </View>
            <View
              data-blade-component="base-box"
              style={
                [
                  {
                    "paddingLeft": 8,
                  },
                ]
              }
            >
              <Text
                accessible={true}
                color="surface.text.gray.subtle"
                data-blade-component="text"
                fontFamily="text"
                fontSize={100}
                fontStyle="normal"
                fontWeight="regular"
                lineHeight={100}
                style={
                  [
                    {
                      "color": "hsla(211, 26%, 34%, 1)",
                      "fontFamily": "Inter",
                      "fontSize": 14,
                      "fontStyle": "normal",
                      "fontWeight": "400",
                      "letterSpacing": 0,
                      "lineHeight": 20,
                      "marginBottom": 0,
                      "marginLeft": 0,
                      "marginRight": 0,
                      "marginTop": 0,
                      "paddingBottom": 0,
                      "paddingLeft": 0,
                      "paddingRight": 0,
                      "paddingTop": 0,
                      "textDecorationLine": "none",
                    },
                  ]
                }
              >
                https://
              </Text>
            </View>
          </View>
          <TextInput
            accessibilityDescribedBy=""
            accessibilityInvalid={false}
            accessibilityRequired={false}
            accessibilityState={
              {
                "disabled": false,
                "expanded": undefined,
              }
            }
            accessible={true}
            autoCapitalize="none"
            autoCompleteType="off"
            data-blade-component="styled-base-input"
            editable={true}
            hasTags={false}
            id="textinput-49-input-50"
            isFocused={false}
            isTableInputCell={false}
            isTextArea={false}
            keyboardType="url"
            leadingIcon={[Function]}
            multiline={false}
            onBlur={[Function]}
            onChangeText={[Function]}
            onEndEditing={[Function]}
            onFocus={[Function]}
            onKeyPress={[Function]}
            onSubmitEditing={[Function]}
            placeholder="something"
            placeholderTextColor="hsla(211, 20%, 52%, 0.32)"
            prefix="https://"
            returnKeyType="go"
            secureTextEntry={false}
            style={
              [
                {
                  "backgroundColor": "hsla(0, 0%, 100%, 0)",
                  "color": "hsla(211, 26%, 34%, 1)",
                  "flexBasis": 0,
                  "flexGrow": 1,
                  "flexShrink": 1,
                  "fontFamily": "Inter",
                  "fontSize": 14,
                  "fontStyle": "normal",
                  "fontWeight": "400",
                  "height": 36,
                  "letterSpacing": 0,
                  "marginBottom": 0,
                  "marginLeft": 0,
                  "marginRight": 0,
                  "marginTop": 0,
                  "minHeight": 36,
                  "paddingBottom": 8,
                  "paddingLeft": 8,
                  "paddingRight": 8,
                  "paddingTop": 8,
                  "textAlignVertical": "top",
                  "textDecorationLine": "none",
                  "width": "100%",
                },
              ]
            }
            suffix=".com"
            textContentType="none"
            trailingInteractionElement={null}
            valueComponentType="text"
          />
          <View
            alignItems="center"
            alignSelf="center"
            data-blade-component="base-box"
            display="flex"
            flexDirection="row"
            style={
              [
                {
                  "alignItems": "center",
                  "alignSelf": "center",
                  "display": "flex",
                  "flexDirection": "row",
                },
              ]
            }
          >
            <View
              data-blade-component="base-box"
              style={
                [
                  {
                    "paddingRight": 12,
                  },
                ]
              }
            >
              <Text
                accessible={true}
                color="surface.text.gray.subtle"
                data-blade-component="text"
                fontFamily="text"
                fontSize={100}
                fontStyle="normal"
                fontWeight="regular"
                lineHeight={100}
                style={
                  [
                    {
                      "color": "hsla(211, 26%, 34%, 1)",
                      "fontFamily": "Inter",
                      "fontSize": 14,
                      "fontStyle": "normal",
                      "fontWeight": "400",
                      "letterSpacing": 0,
                      "lineHeight": 20,
                      "marginBottom": 0,
                      "marginLeft": 0,
                      "marginRight": 0,
                      "marginTop": 0,
                      "paddingBottom": 0,
                      "paddingLeft": 0,
                      "paddingRight": 0,
                      "paddingTop": 0,
                      "textDecorationLine": "none",
                    },
                  ]
                }
              >
                .com
              </Text>
            </View>
          </View>
        </View>
      </View>
    </View>
    <View
      data-blade-component="base-box"
      style={
        [
          {
            "marginLeft": 0,
          },
        ]
      }
    >
      <View
        data-blade-component="base-box"
        display="flex"
        flexDirection="row"
        justifyContent="flex-end"
        style={
          [
            {
              "display": "flex",
              "flexDirection": "row",
              "justifyContent": "flex-end",
            },
          ]
        }
      />
    </View>
  </View>
</View>
`;
